--- a/docs/_sass/navigation.scss
+++ b/docs/_sass/navigation.scss
@@ -12,8 +12,9 @@ nav {
 
 .nav-container {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 }
+
 
 .nav-list {
 	display: flex;
