--- a/docs/assets/css/stellarnav.css
+++ b/docs/assets/css/stellarnav.css
@@ -78,7 +78,7 @@ body.stellarnav-noscroll-x { overflow-x: hidden; }
 .stellarnav.dark .icon-close:after { border-color: #FFF; }
 
 /* mobile nav */
-.stellarnav .menu-toggle, .stellarnav .call-btn-mobile, .stellarnav .location-btn-mobile, .stellarnav .close-menu { padding: 15px; box-sizing: border-box; }
+.stellarnav .menu-toggle, .stellarnav .call-btn-mobile, .stellarnav .location-btn-mobile, .stellarnav .close-menu { padding-bottom: 5px; box-sizing: border-box; }
 .stellarnav .menu-toggle span.bars { display: inline-block; margin-right: 7px; position: relative; top: 3px; }
 .stellarnav .menu-toggle span.bars span { display: block; width: 15px; height: 2px; border-radius: 6px; background: #FFF; margin: 0 0 3px; }
 .stellarnav .full { width: 100%; }
